--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_ENV=production
 APP_DEBUG=false
-APP_URL=https://reports.miraheze.org/
+APP_URL=https://reports.wikivy.com/
 APP_KEY=
 
 CACHE_STORE=file
@@ -12,7 +12,6 @@ DB_PORT=port
 DB_DATABASE=db
 DB_USERNAME=user
 DB_PASSWORD=password
-MYSQL_ATTR_SSL_CA=/ca.crt
 
 FILESYSTEM_DISK=public
 
@@ -30,13 +29,14 @@ MAIL_FROM_NAME="From Name"
 MEDIAWIKI_IDENTIFIER=
 MEDIAWIKI_SECRET=
 MEDIAWIKI_CALLBACK=
-MEDIAWIKI_BASE=https://meta.miraheze.org
+MEDIAWIKI_BASE=https://meta.wikivy.com
 
 ALERT_EMAIL=null
 
 DISCORD_WEBHOOK=null
 MATTERMOST_WEBHOOK=null
 WEB_PROXY=null
+MEDIAWIKI_API_BASE=https://login.wikivy.com/w
 
 SESSION_DRIVER=file
 
